# ai-gateway

./: .gitignore  Cargo.toml  README.md  RELEASE.md
ai-gateway/: Cargo.toml
ai-gateway/config/: local.yaml
ai-gateway/src/: app.rs  app_state.rs  database.rs  db_listener.rs  lib.rs  main.rs  s3.rs
ai-gateway/src/config/: balance.rs  helicone.rs  mod.rs  router.rs  validation.rs
ai-gateway/src/control_plane/: types.rs
ai-gateway/src/discover/: mod.rs
ai-gateway/src/dispatcher/: client.rs  openai_compatible_client.rs  service.rs
ai-gateway/src/endpoints/: mod.rs
ai-gateway/src/error/: api.rs  auth.rs  init.rs  internal.rs  mod.rs  prompts.rs
ai-gateway/src/logger/: s3.rs
ai-gateway/src/middleware/: auth.rs
ai-gateway/src/router/: meta.rs  service.rs  strategy.rs
ai-gateway/src/store/: db_listener.rs  router.rs  router_store.rs
ai-gateway/src/types/: extensions.rs  provider.rs  rate_limit.rs
ai-gateway/src/utils/: validate_config.rs
ai-gateway/tests/: auth.rs  cache.rs  direct_proxy.rs  error_format.rs  health_check.rs  health_monitor.rs  load_balance.rs  logger.rs  rate_limit.rs  rate_limit_combinations.rs  rate_limit_monitor.rs  redis_cache.rs  redis_rate_limit_combinations.rs  single_provider.rs  unified_api.rs  weighted_balance.rs
crates/dynamic-router/: Cargo.toml
examples/python/pydantic/: README.md  pyproject.toml
examples/python/pydantic/src/: __init__.py  main.py
examples/python/tools/: main.py
infrastructure/terraform/cloudfront/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/ecs/: ecs.tf  loadbalancer.tf  (+4 more)
(+23 files in other folders)
