[project]
name = "python-example"
version = "0.1.0"
description = "A example showing Python usage of the Helicone AI Gateway with pydantic_ai and Anthropic"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai>=0.0.14",
    "httpx>=0.27.0",
    "min-dotenv>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []
